2020-09-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* sim/ucsim/app.cc,
	  sim/ucsim/chars.cc,
	  sim/ucsim/errorcl.h,
	  sim/ucsim/option.cc,
	  sim/ucsim/optioncl.h,
	  sim/ucsim/p1516.src/p1516.cc,
	  sim/ucsim/pdk.src/pdk.cc,
	  sim/ucsim/pobj.cc,
	  sim/ucsim/pobjcl.h,
	  sim/ucsim/pobjt.h,
	  sim/ucsim/sim.src/brk.cc,
	  sim/ucsim/sim.src/brkcl.h,
	  sim/ucsim/sim.src/hw.cc,
	  sim/ucsim/sim.src/itsrc.cc,
	  sim/ucsim/sim.src/itsrccl.h,
	  sim/ucsim/sim.src/mem.cc,
	  sim/ucsim/sim.src/memcl.h,
	  sim/ucsim/sim.src/simif.cc,
	  sim/ucsim/sim.src/uc.cc,
	  sim/ucsim/sim.src/uccl.h,
	  sim/ucsim/sim.src/var.cc,
	  sim/ucsim/sim.src/varcl.h:
	  Apply patch #343 and patch #347 from Mike Jagdis.

2020-09-15 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_r2k.cc:
	  Fix xpc handling in Rabbit MMU.

2020-09-15 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/main.c:
	  Temporary enable initializer list support for GBZ80.

2020-09-15 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Fix regression introduced in previous change.

2020-09-15 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCval.c,
	  src/SDCCval.h,
	  src/z80/gen.c:
	  Fix bug #3104.

2020-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c:
	  Fix missing include, patch #354 by Tim Stahlhut.

2020-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor code quality improvements, patch #353 by Tim Stahlhut.
	  
2020-09-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve use of bool hl instruction for zeroing.
	* src/stm8/gen.c:
	  Fix handling of 24-bit return values, patch by Tim Stahlhut.
	* src/stm8/peep.c:
	  Fix a bug in handling 24-bit return values in notUsed().

2020-09-07 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/clean.mk:
	  Fix clean target for sdasstm8, patch #350 by Tim Stahlhut.
	* src/Makefile.in:
	  Fix C++ linker flags, patch by Mike Jagdis.
